--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -1,159 +1,144 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="EngineGUI">
+    <Filter Include="Core">
       <UniqueIdentifier>{e9d5caa6-af62-4385-8920-d9e98a01281d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EngineGUI\System">
+    <Filter Include="Core\System">
       <UniqueIdentifier>{60c54db1-0e13-4bf6-bb8e-ab60ea848f72}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EngineGUI\Controls">
+    <Filter Include="Core\Controls">
       <UniqueIdentifier>{774b1ce6-12e5-42c3-9683-86e75e033158}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EngineGUI\System\Events">
-      <UniqueIdentifier>{cd4f9f1c-0719-481d-83b4-ff11d52368f2}</UniqueIdentifier>
+    <Filter Include="Core\Controls\ArrangeControls">
+      <UniqueIdentifier>{390141cc-f649-4da2-8f9e-f430d0705348}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EngineGUI\System\Events\Input">
-      <UniqueIdentifier>{cb217187-f6ff-4754-8cf9-ed59c105e437}</UniqueIdentifier>
+    <Filter Include="Core\System\CommonTypes">
+      <UniqueIdentifier>{06fd8c45-bf52-4430-906a-d812cd1195f3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EngineGUI\Controls\ArrangeControls">
-      <UniqueIdentifier>{ec02b47f-e168-46d5-884c-6d01fe49a764}</UniqueIdentifier>
+    <Filter Include="Core\System\Events">
+      <UniqueIdentifier>{a7e6a018-f94c-4ab8-a9bb-ff41141d7b96}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EngineGUI\System\Windows">
-      <UniqueIdentifier>{66f98e77-03de-4536-b03e-c471bdf63f5d}</UniqueIdentifier>
+    <Filter Include="Core\System\Events\Input">
+      <UniqueIdentifier>{31d654f3-e988-4186-987d-406350dd9df2}</UniqueIdentifier>
     </Filter>
-    <Filter Include="EngineGUI\System\CommonTypes">
-      <UniqueIdentifier>{a0d3499c-5079-4a81-a5c4-06ce7231e3ac}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="EngineGUI\System\Windows\WinAPI">
-      <UniqueIdentifier>{412a1947-6828-4e73-ad19-dae56ea8d593}</UniqueIdentifier>
+    <Filter Include="Native">
+      <UniqueIdentifier>{e51df8e3-b6f5-4724-b1c5-ca1be764df67}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\targetver.h">
-      <Filter>EngineGUI</Filter>
+      <Filter>Core</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Controls\IControl.h">
-      <Filter>EngineGUI\Controls</Filter>
+    <ClInclude Include="..\..\..\Core\Controls\IControl.h">
+      <Filter>Core\Controls</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Events\IEventArgs.h">
-      <Filter>EngineGUI\System\Events</Filter>
+    <ClInclude Include="..\..\..\Core\System\HostWindow.h">
+      <Filter>Core\System</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Events\Input\InputEventArgs.h">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClInclude Include="..\..\..\Core\Controls\TopLevelControl.h">
+      <Filter>Core\Controls</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Events\Input\MouseEventArgs.h">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClInclude Include="..\..\..\Core\System\GUISystem.h">
+      <Filter>Core\System</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Events\Input\MouseButtonEventArgs.h">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClInclude Include="..\..\..\Core\System\CommonTypes\Thickness.h">
+      <Filter>Core\System\CommonTypes</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Controls\ArrangeControls\IPanel.h">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClInclude Include="..\..\..\Core\System\CommonTypes\CommonTypes.h">
+      <Filter>Core\System\CommonTypes</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Controls\ArrangeControls\Grid.h">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClInclude Include="..\..\..\Core\System\Events\IEventArgs.h">
+      <Filter>Core\System\Events</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Controls\ArrangeControls\StackPanel.h">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClInclude Include="..\..\..\Core\System\Events\Input\InputEventArgs.h">
+      <Filter>Core\System\Events\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Controls\ArrangeControls\DockPanel.h">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClInclude Include="..\..\..\Core\System\Events\Input\KeyboardEventArgs.h">
+      <Filter>Core\System\Events\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Controls\ArrangeControls\WrapPanel.h">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClInclude Include="..\..\..\Core\System\Events\Input\KeyEventArgs.h">
+      <Filter>Core\System\Events\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Events\Input\MouseWheelEventArgs.h">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClInclude Include="..\..\..\Core\System\Events\Input\MouseButtonEventArgs.h">
+      <Filter>Core\System\Events\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\HostWindow.h">
-      <Filter>EngineGUI\System</Filter>
+    <ClInclude Include="..\..\..\Core\System\Events\Input\MouseEventArgs.h">
+      <Filter>Core\System\Events\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Windows\INativeWindow.h">
-      <Filter>EngineGUI\System\Windows</Filter>
+    <ClInclude Include="..\..\..\Core\System\Events\Input\MouseWheelEventArgs.h">
+      <Filter>Core\System\Events\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Controls\TopLevelControl.h">
-      <Filter>EngineGUI\Controls</Filter>
+    <ClInclude Include="..\..\..\Core\System\Windows\INativeWindow.h">
+      <Filter>Native</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\GUISystem.h">
-      <Filter>EngineGUI\System</Filter>
+    <ClInclude Include="..\..\..\Core\System\Windows\INativeGUI.h">
+      <Filter>Native</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Events\Input\KeyboardEventArgs.h">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\DockPanel.h">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Events\Input\KeyEventArgs.h">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\Grid.h">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\CommonTypes\Thickness.h">
-      <Filter>EngineGUI\System\CommonTypes</Filter>
+    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\IPanel.h">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\CommonTypes\CommonTypes.h">
-      <Filter>EngineGUI\System\CommonTypes</Filter>
+    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\StackPanel.h">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\System\Windows\INativeGUI.h">
-      <Filter>EngineGUI\System\Windows</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\System\Windows\WinAPI\Win32ApiWindow.h">
-      <Filter>EngineGUI\System\Windows\WinAPI</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\System\Windows\WinAPI\WinAPIGUI.h">
-      <Filter>EngineGUI\System\Windows\WinAPI</Filter>
+    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\WrapPanel.h">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\Controls\IControl.cpp">
-      <Filter>EngineGUI\Controls</Filter>
+    <ClCompile Include="..\..\..\Core\Controls\IControl.cpp">
+      <Filter>Core\Controls</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Events\Input\InputEventArgs.cpp">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClCompile Include="..\..\..\Core\System\HostWindow.cpp">
+      <Filter>Core\System</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Events\Input\MouseEventArgs.cpp">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClCompile Include="..\..\..\Core\System\GUISystem.cpp">
+      <Filter>Core\System</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Events\Input\MouseButtonEventArgs.cpp">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClCompile Include="..\..\..\Core\System\Initializers.cpp">
+      <Filter>Core\System</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Events\IEventArgs.cpp">
-      <Filter>EngineGUI\System\Events</Filter>
+    <ClCompile Include="..\..\..\Core\System\Events\IEventArgs.cpp">
+      <Filter>Core\System\Events</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Controls\ArrangeControls\IPanel.cpp">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClCompile Include="..\..\..\Core\System\Events\Input\InputEventArgs.cpp">
+      <Filter>Core\System\Events\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Controls\ArrangeControls\Grid.cpp">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClCompile Include="..\..\..\Core\System\Events\Input\KeyboardEventArgs.cpp">
+      <Filter>Core\System\Events\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Controls\ArrangeControls\StackPanel.cpp">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClCompile Include="..\..\..\Core\System\Events\Input\KeyEventArgs.cpp">
+      <Filter>Core\System\Events\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Controls\ArrangeControls\DockPanel.cpp">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClCompile Include="..\..\..\Core\System\Events\Input\MouseButtonEventArgs.cpp">
+      <Filter>Core\System\Events\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Controls\ArrangeControls\WrapPanel.cpp">
-      <Filter>EngineGUI\Controls\ArrangeControls</Filter>
+    <ClCompile Include="..\..\..\Core\System\Events\Input\MouseEventArgs.cpp">
+      <Filter>Core\System\Events\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Events\Input\MouseWheelEventArgs.cpp">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClCompile Include="..\..\..\Core\System\Events\Input\MouseWheelEventArgs.cpp">
+      <Filter>Core\System\Events\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\HostWindow.cpp">
-      <Filter>EngineGUI\System</Filter>
+    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\DockPanel.cpp">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\GUISystem.cpp">
-      <Filter>EngineGUI\System</Filter>
+    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\Grid.cpp">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Events\Input\KeyboardEventArgs.cpp">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\IPanel.cpp">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Events\Input\KeyEventArgs.cpp">
-      <Filter>EngineGUI\System\Events\Input</Filter>
+    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\StackPanel.cpp">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\System\Windows\WinAPI\Win32ApiWindow.cpp">
-      <Filter>EngineGUI\System\Windows\WinAPI</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\System\Windows\WinAPI\WinAPIGUI.cpp">
-      <Filter>EngineGUI\System\Windows\WinAPI</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\..\System\Initializers.cpp">
-      <Filter>EngineGUI\System</Filter>
+    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\WrapPanel.cpp">
+      <Filter>Core\Controls\ArrangeControls</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
