--- a/ProjectDir/Visual2015/Tests/PrototyperGUI/PrototyperGUI.vcxproj
+++ b/ProjectDir/Visual2015/Tests/PrototyperGUI/PrototyperGUI.vcxproj
@@ -163,11 +163,11 @@
     <ProjectReference Include="..\..\..\..\..\swGraphicAPI\ProjectsDir\Visual2015\DX11API\DX11API.vcxproj">
       <Project>{44643d7f-1c71-41c1-b452-b2dc5e088a58}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\..\swInputLibrary\ProjectsDir\Visual2015\WinApiInputProxy\WinApiInputProxy.vcxproj">
-      <Project>{9351732d-b6ec-4db2-bd75-f18e880b3815}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\..\CoreGUI\CoreGUI.vcxproj">
       <Project>{c6dab3ee-e9a7-47fc-9b33-a8f4250c219b}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Win32NativeGUI\Win32NativeGUI.vcxproj">
+      <Project>{267292a0-c262-43e7-afb1-1f63439fd465}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
