--- a/ProjectDir/Visual2015/Win32NativeGUI/Win32NativeGUI.vcxproj
+++ b/ProjectDir/Visual2015/Win32NativeGUI/Win32NativeGUI.vcxproj
@@ -5,33 +5,42 @@
       <Configuration>Debug</Configuration>
       <Platform>Win32</Platform>
     </ProjectConfiguration>
-    <ProjectConfiguration Include="Debug|x64">
-      <Configuration>Debug</Configuration>
-      <Platform>x64</Platform>
-    </ProjectConfiguration>
     <ProjectConfiguration Include="Release|Win32">
       <Configuration>Release</Configuration>
       <Platform>Win32</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Debug|x64">
+      <Configuration>Debug</Configuration>
+      <Platform>x64</Platform>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|x64">
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\Native\INativeGUI.h" />
+    <ClInclude Include="..\..\..\Native\INativeWindow.h" />
+    <ClInclude Include="..\..\..\Native\WinAPI\Win32ApiWindow.h" />
+    <ClInclude Include="..\..\..\Native\WinAPI\WinAPIGUI.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\Native\WinAPI\Win32ApiWindow.cpp" />
+    <ClCompile Include="..\..\..\Native\WinAPI\WinAPIGUI.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\swInputLibrary\ProjectsDir\Visual2015\WinApiInputProxy\WinApiInputProxy.vcxproj">
+      <Project>{9351732d-b6ec-4db2-bd75-f18e880b3815}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{C6DAB3EE-E9A7-47FC-9B33-A8F4250C219B}</ProjectGuid>
+    <ProjectGuid>{267292A0-C262-43E7-AFB1-1F63439FD465}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>SWGUI</RootNamespace>
-    <ProjectName>CoreGUI</ProjectName>
+    <RootNamespace>Win32NativeGUI</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
@@ -44,6 +53,12 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
+    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <UseDebugLibraries>true</UseDebugLibraries>
+    <PlatformToolset>v140</PlatformToolset>
+    <CharacterSet>Unicode</CharacterSet>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
@@ -54,21 +69,23 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
+  <ImportGroup Label="Shared">
+  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="CoreGUIConfig.props" />
-  </ImportGroup>
-  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="PropertySheets">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="CoreGUIConfig.props" />
+    <Import Project="Win32NativeGUIConfig.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="CoreGUIConfig.props" />
+    <Import Project="Win32NativeGUIConfig.props" />
   </ImportGroup>
-  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="PropertySheets">
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="CoreGUIConfig.props" />
+    <Import Project="Win32NativeGUIConfig.props" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    <Import Project="Win32NativeGUIConfig.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup />
@@ -79,11 +96,9 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -92,12 +107,10 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -109,11 +122,9 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
@@ -126,62 +137,14 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\DockPanel.h" />
-    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\Grid.h" />
-    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\IPanel.h" />
-    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\StackPanel.h" />
-    <ClInclude Include="..\..\..\Core\Controls\ArrangeControls\WrapPanel.h" />
-    <ClInclude Include="..\..\..\Core\Controls\IControl.h" />
-    <ClInclude Include="..\..\..\Core\Controls\TopLevelControl.h" />
-    <ClInclude Include="..\..\..\Core\System\CommonTypes\CommonTypes.h" />
-    <ClInclude Include="..\..\..\Core\System\CommonTypes\Thickness.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\Input\KeyboardEventArgs.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\Input\KeyEventArgs.h" />
-    <ClInclude Include="..\..\..\Core\System\GUISystem.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\IEventArgs.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\Input\InputEventArgs.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\Input\MouseButtonEventArgs.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\Input\MouseEventArgs.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\Input\MouseWheelEventArgs.h" />
-    <ClInclude Include="..\..\..\Core\System\HostWindow.h" />
-    <ClInclude Include="..\..\..\Core\System\Windows\INativeGUI.h" />
-    <ClInclude Include="..\..\..\Core\System\Windows\INativeWindow.h" />
-    <ClInclude Include="..\..\..\targetver.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\DockPanel.cpp" />
-    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\Grid.cpp" />
-    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\IPanel.cpp" />
-    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\StackPanel.cpp" />
-    <ClCompile Include="..\..\..\Core\Controls\ArrangeControls\WrapPanel.cpp" />
-    <ClCompile Include="..\..\..\Core\Controls\IControl.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\Input\KeyboardEventArgs.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\Input\KeyEventArgs.cpp" />
-    <ClCompile Include="..\..\..\Core\System\GUISystem.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\IEventArgs.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\Input\InputEventArgs.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\Input\MouseButtonEventArgs.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\Input\MouseEventArgs.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\Input\MouseWheelEventArgs.cpp" />
-    <ClCompile Include="..\..\..\Core\System\HostWindow.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Initializers.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\swGraphicAPI\ProjectsDir\Visual2015\ResourceManager\ResourceManager.vcxproj">
-      <Project>{9f71f0da-1d72-4e96-93b7-5ac2c9cb6ede}</Project>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
