--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -146,6 +146,12 @@
     <ClInclude Include="..\..\..\Core\Controls\TopLevelControl.h" />
     <ClInclude Include="..\..\..\Core\Controls\UIElement.h" />
     <ClInclude Include="..\..\..\Core\Controls\Visual.h" />
+    <ClInclude Include="..\..\..\Core\Media\Brushes\Brush.h" />
+    <ClInclude Include="..\..\..\Core\Media\Brushes\GradientBrush.h" />
+    <ClInclude Include="..\..\..\Core\Media\Brushes\ImageBrush.h" />
+    <ClInclude Include="..\..\..\Core\Media\Brushes\LinearGradient.h" />
+    <ClInclude Include="..\..\..\Core\Media\Brushes\RadialGradient.h" />
+    <ClInclude Include="..\..\..\Core\Media\Brushes\SolidColorBrush.h" />
     <ClInclude Include="..\..\..\Core\System\CommonTypes\CommonTypes.h" />
     <ClInclude Include="..\..\..\Core\System\CommonTypes\Thickness.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\DependencyObject.h" />
