--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -156,7 +156,9 @@
     <ClInclude Include="..\..\..\Core\System\CommonTypes\Thickness.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\DependencyObject.h" />
     <ClInclude Include="..\..\..\Core\System\Events\DelegateContainer.h" />
-    <ClInclude Include="..\..\..\Core\System\Events\EventsManager.h" />
+    <ClInclude Include="..\..\..\Core\System\Events\EventHandlers.h" />
+    <ClInclude Include="..\..\..\Core\System\Events\EventProxy.h" />
+    <ClInclude Include="..\..\..\Core\System\Events\EventsSystem.h" />
     <ClInclude Include="..\..\..\Core\System\Events\Input\KeyboardEventArgs.h" />
     <ClInclude Include="..\..\..\Core\System\Events\Input\KeyEventArgs.h" />
     <ClInclude Include="..\..\..\Core\System\Events\IEventArgs.h" />
@@ -181,7 +183,8 @@
     <ClCompile Include="..\..\..\Core\Controls\IControl.cpp" />
     <ClCompile Include="..\..\..\Core\Controls\UIElement.cpp" />
     <ClCompile Include="..\..\..\Core\System\DataBinding\DependencyObject.cpp" />
-    <ClCompile Include="..\..\..\Core\System\Events\EventsManager.cpp" />
+    <ClCompile Include="..\..\..\Core\System\Events\EventHandlers.cpp" />
+    <ClCompile Include="..\..\..\Core\System\Events\EventsSystem.cpp" />
     <ClCompile Include="..\..\..\Core\System\Events\Input\KeyboardEventArgs.cpp" />
     <ClCompile Include="..\..\..\Core\System\Events\Input\KeyEventArgs.cpp" />
     <ClCompile Include="..\..\..\Core\System\Events\IEventArgs.cpp" />
