--- a/ProjectDir/Visual2015/Tests/TestUIElement/TestUIElement.vcxproj
+++ b/ProjectDir/Visual2015/Tests/TestUIElement/TestUIElement.vcxproj
@@ -150,7 +150,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\Tests\TestUIElement\Classes\TestUIElementClass.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestUIElement\main.cpp" />
+    <ClCompile Include="..\..\..\..\Tests\TestUIElement\TestEventRouting.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestUIElement\TestRegistration.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -169,6 +171,9 @@
     <ProjectReference Include="..\..\CoreGUI\CoreGUI.vcxproj">
       <Project>{c6dab3ee-e9a7-47fc-9b33-a8f4250c219b}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\Tests\TestUIElement\Classes\TestUIElementClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
