Template events system allows to call member function pointer

--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -219,4 +219,9 @@
       <Filter>Core\System\Events</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\Core\System\Events\EventsSystem.inl">
+      <Filter>Core\System\Events</Filter>
+    </None>
+  </ItemGroup>
 </Project>
