--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -204,6 +204,9 @@
       <Project>{9f71f0da-1d72-4e96-93b7-5ac2c9cb6ede}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\Core\System\Events\EventsSystem.inl" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
