--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="..\..\..\Core\System\Events\Input\MouseWheelEventArgs.h" />
     <ClInclude Include="..\..\..\Core\System\Events\RegisteredEvent.h" />
     <ClInclude Include="..\..\..\Core\System\GUISystem.h" />
+    <ClInclude Include="..\..\..\Core\System\HostLogic.h" />
     <ClInclude Include="..\..\..\Core\System\HostWindow.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\DrawingContext.h" />
     <ClInclude Include="..\..\..\Core\System\Rendering\RenderingSystem.h" />
@@ -196,6 +197,7 @@
     <ClCompile Include="..\..\..\Core\System\Events\Input\MouseEventArgs.cpp" />
     <ClCompile Include="..\..\..\Core\System\Events\Input\MouseWheelEventArgs.cpp" />
     <ClCompile Include="..\..\..\Core\System\GUISystem.cpp" />
+    <ClCompile Include="..\..\..\Core\System\HostLogic.cpp" />
     <ClCompile Include="..\..\..\Core\System\HostWindow.cpp" />
     <ClCompile Include="..\..\..\Core\System\Initializers.cpp" />
     <ClCompile Include="..\..\..\Core\System\Rendering\RenderingSystem.cpp" />
