Mouse button events

--- a/ProjectDir/Visual2015/Tests/TestGUISystem/TestGUISystem.vcxproj
+++ b/ProjectDir/Visual2015/Tests/TestGUISystem/TestGUISystem.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="..\..\..\..\Tests\TestGUISystem\TestEventRouting.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestGUISystem\TestKeyEvents.cpp" />
     <ClCompile Include="..\..\..\..\Tests\TestGUISystem\TestRegistration.cpp" />
+    <ClCompile Include="TestMouseEvents.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Tests\TestGUISystem\Classes\TestUIElementClass.h" />
