--- a/ProjectDir/Visual2015/Tests/TestGUISystem/TestGUISystem.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestGUISystem/TestGUISystem.vcxproj.filters
@@ -28,6 +28,9 @@
     <ClCompile Include="..\..\..\..\Tests\TestGUISystem\TestKeyEvents.cpp">
       <Filter>TestGUISystem</Filter>
     </ClCompile>
+    <ClCompile Include="TestMouseEvents.cpp">
+      <Filter>TestGUISystem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Tests\TestGUISystem\Classes\TestUIElementClass.h">
