--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="..\..\..\Core\System\HostLogic.h">
       <Filter>Core\System</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Core\System\Events\Input\MouseMoveEventArgs.h">
+      <Filter>Core\System\Events\Input</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Core\Controls\IControl.cpp">
