--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -159,11 +159,12 @@
     <ClInclude Include="..\..\..\Core\System\CommonTypes\Thickness.h" />
     <ClInclude Include="..\..\..\Core\System\Config\GUISystemConfig.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\Binding.h" />
-    <ClInclude Include="..\..\..\Core\System\DataBinding\BindingExpression.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\BindingInfo.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\BindingMode.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\Converters\IValueConverter.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\DependencyObject.h" />
+    <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\BindingExpression.h" />
+    <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\PathToContextExpression.h" />
     <ClInclude Include="..\..\..\Core\System\DataBinding\Validators\IValueValidator.h" />
     <ClInclude Include="..\..\..\Core\System\Events\DelegateContainer.h" />
     <ClInclude Include="..\..\..\Core\System\Events\EventHandlers.h" />
