--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj.filters
@@ -210,7 +210,7 @@
     <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\BindingExpression.h">
       <Filter>Core\System\DataBinding\Expressions</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\PathToContextExpression.h">
+    <ClInclude Include="..\..\..\Core\System\DataBinding\Expressions\DefaultBindingExpression.h">
       <Filter>Core\System\DataBinding\Expressions</Filter>
     </ClInclude>
   </ItemGroup>
@@ -283,6 +283,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\Core\System\Time\Clock.cpp">
       <Filter>Core\System\Time</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\Core\System\DataBinding\Expressions\DefaultBindingExpression.cpp">
+      <Filter>Core\System\DataBinding\Expressions</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
