--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
@@ -4,5 +4,25 @@
     <Filter Include="TestBindings">
       <UniqueIdentifier>{ede5a79e-5978-4636-a9f2-4fff61564486}</UniqueIdentifier>
     </Filter>
+    <Filter Include="TestExpressions">
+      <UniqueIdentifier>{d023e6ee-0804-4dd1-b9ea-2b0470984636}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Classes">
+      <UniqueIdentifier>{084fa910-e556-4f5a-b999-ebdd881af70c}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\..\Tests\TestBindings\main.cpp" />
+    <ClCompile Include="..\..\..\..\Tests\TestBindings\TestExpressions\TestDefaultBindingExpression.cpp">
+      <Filter>TestExpressions</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\Tests\TestBindings\Classes\Registration.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Animal.h">
+      <Filter>Classes</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
