[Test] Evaluate path to property in subclass

--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Animal.h" />
+    <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Mammals\Dog.h" />
+    <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Mammals\Mammal.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{22C79F18-F938-4A9E-A4B0-B77E8F87429D}</ProjectGuid>
