--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="Classes">
       <UniqueIdentifier>{084fa910-e556-4f5a-b999-ebdd881af70c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Classes\Mammals">
+      <UniqueIdentifier>{42aeed21-f22e-4d24-ade2-300ba6870b36}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\Tests\TestBindings\main.cpp" />
@@ -29,6 +32,12 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Animal.h">
       <Filter>Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Mammals\Mammal.h">
+      <Filter>Classes\Mammals</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Mammals\Dog.h">
+      <Filter>Classes\Mammals</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
