[Test] Evaluate 2 levels path

--- a/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj
+++ b/ProjectDir/Visual2015/Tests/TestBindings/TestBindings.vcxproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Animal.h" />
+    <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Components\PhysicalProperties.h" />
     <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Mammals\Dog.h" />
     <ClInclude Include="..\..\..\..\Tests\TestBindings\Classes\Mammals\Mammal.h" />
   </ItemGroup>
