--- a/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
+++ b/ProjectDir/Visual2015/CoreGUI/CoreGUI.vcxproj
@@ -199,6 +199,7 @@
     <ClCompile Include="..\..\..\Core\Controls\IControl.cpp" />
     <ClCompile Include="..\..\..\Core\Controls\UIElement.cpp" />
     <ClCompile Include="..\..\..\Core\System\DataBinding\DependencyObject.cpp" />
+    <ClCompile Include="..\..\..\Core\System\DataBinding\Expressions\BindingExpression.cpp" />
     <ClCompile Include="..\..\..\Core\System\DataBinding\Expressions\DefaultBindingExpression.cpp" />
     <ClCompile Include="..\..\..\Core\System\Events\EventHandlers.cpp" />
     <ClCompile Include="..\..\..\Core\System\Events\EventsSystem.cpp" />
